--- a/messaging-app/Makefile
+++ b/messaging-app/Makefile
@@ -1,23 +1,28 @@
 .PHONY: install run-server run-client run-all clean
 
+# Default arguments (can be overridden)
+SERVER_ARGS ?=
+CLIENT_ARGS ?=
+
 # Install dependencies
 install:
-	pip install -r requirements.txt
+	pip install -r server/requirements.txt
+	pip install -r client/requirements.txt
 
-# Start the server
+# Start the server with optional arguments
 run-server:
-	python server.py
+	cd server && python server.py $(SERVER_ARGS)
 
-# Start the client with Streamlit
+# Start the client with Streamlit, passing arguments correctly
 run-client:
-	streamlit run client.py
+	cd client && streamlit run client.py -- $(CLIENT_ARGS)
 
 # Start both server and client (server in the background)
 run-all:
-	python server.py & \
+	cd server && python server.py $(SERVER_ARGS) & \
 	sleep 2 && \
-	streamlit run client.py
+	cd client && streamlit run client.py -- $(CLIENT_ARGS)
 
-# Clean up virtual environment (if used)
+# Clean up virtual environments or unnecessary files
 clean:
-	rm -rf venv
+	rm -rf server/venv client/venv
