--- a/tetris_demo/client/package.json
+++ b/tetris_demo/client/package.json
@@ -8,6 +8,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:unit": "react-scripts test --watchAll=false --testPathPattern 'src/.*/__tests__/.*\\.test\\.js$|tests/unit/.*\\.test\\.js$'",
+    "test:integration": "react-scripts test --testPathPattern=tests/integration",
+    "test:coverage": "react-scripts test --coverage",
+    "test:all": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -30,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.6.1",
+    "jest": "^27.5.1",
+    "msw": "^2.7.5"
   }
 }
