--- a/tetris_demo/client/public/config.json
+++ b/tetris_demo/client/public/config.json
@@ -1,23 +1,6 @@
+// In client/public/config.json
 {
   "client": {
-    "serverAddresses": [
-      {
-        "id": 0,
-        "host": "10.250.70.19",
-        "port": 3001
-      },
-      {
-        "id": 1,
-        "host": "10.250.70.19",
-        "port": 3002
-      },
-      {
-        "id": 2,
-        "host": "10.250.70.19",
-        "port": 3003
-      }
-    ],
-    "reconnectInterval": 2000,
-    "debug": true
+    "serverAddresses": ["https://tetristributed.onrender.com"]
   }
 }
