commented out testing dependencies for deploy

--- a/tetris_deploy/server/cluster-config.json
+++ b/tetris_deploy/server/cluster-config.json
@@ -2,7 +2,7 @@
   "servers": [
     {
       "id": 0,
-      "host": "your-app-name.onrender.com",
+      "host": "tetristributed.onrender.com",
       "port": 443,
       "clusterPort": 444
     }
