--- a/tetris_deploy/client/package.json
+++ b/tetris_deploy/client/package.json
@@ -36,12 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    // "@testing-library/jest-dom": "^6.6.3",
-    // "@testing-library/react": "^14.1.0",
-    // "@testing-library/react-hooks": "^8.0.1",
-    // "@testing-library/user-event": "^14.6.1",
-    // "jest": "^27.5.1",
-    // "msw": "^2.7.5"
-  }
+  "devDependencies": {}
 }
