--- a/tetris_deploy/client/public/config.json
+++ b/tetris_deploy/client/public/config.json
@@ -1,23 +1,12 @@
 {
-  "client": {
-    "serverAddresses": [
-      {
-        "id": 0,
-        "host": "10.250.70.19",
-        "port": 3001
-      },
-      {
-        "id": 1,
-        "host": "10.250.70.19",
-        "port": 3002
-      },
-      {
-        "id": 2,
-        "host": "10.250.70.19",
-        "port": 3003
-      }
-    ],
-    "reconnectInterval": 2000,
-    "debug": true
-  }
+  "servers": [
+    {
+      "id": 0,
+      "host": "distributed-systems-soww.onrender.com",
+      "port": 443,
+      "clusterPort": 444
+    }
+  ],
+  "heartbeatInterval": 2000,
+  "heartbeatTimeout": 6000
 }
